multiboot2 support: use bitfields for HRT flags

--- a/arch/Cargo.toml
+++ b/arch/Cargo.toml
@@ -8,6 +8,7 @@ byteorder = "=1.2.1"
 kvm-bindings = "0.1"
 kvm-ioctls = "0.2"
 libc = ">=0.2.39"
+bitfield = ">=0.13.2"
 
 arch_gen = { path = "../arch_gen" }
 memory_model = { path = "../memory_model" }
