--- a/src/arch/Cargo.toml
+++ b/src/arch/Cargo.toml
@@ -8,6 +8,7 @@ kvm-bindings = { version = ">=0.2", features = ["fam-wrappers"] }
 kvm-ioctls = ">=0.4"
 libc = ">=0.2.39"
 utils = { path = "../utils" }
+bitfield = "0.13.2"
 multiboot2-host = { version = "0.1.1", features = ["hvm"] }
 
 arch_gen = { path = "../arch_gen" }
