--- a/src/vmm/Cargo.toml
+++ b/src/vmm/Cargo.toml
@@ -10,6 +10,7 @@ libc = ">=0.2.39"
 serde = ">=1.0.27"
 serde_derive = ">=1.0.27"
 serde_json = ">=1.0.9"
+byteorder = "1.3.4"
 
 arch = { path = "../arch" }
 devices = { path = "../devices" }
