--- a/src/vmm/Cargo.toml
+++ b/src/vmm/Cargo.toml
@@ -11,6 +11,7 @@ serde = ">=1.0.27"
 serde_derive = ">=1.0.27"
 serde_json = ">=1.0.9"
 byteorder = "1.3.4"
+num_enum = "0.5.0"
 
 arch = { path = "../arch" }
 devices = { path = "../devices" }
