new calling convention + finished hcalls

--- a/src/vmm/Cargo.toml
+++ b/src/vmm/Cargo.toml
@@ -27,6 +27,7 @@ seccomp = { path = "../seccomp" }
 snapshot = { path = "../snapshot"}
 utils = { path = "../utils" }
 byteorder = "1.3.4"
+num_enum = "0.5.1"
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 cpuid = { path = "../cpuid" }
