--- a/src/kernel/Cargo.toml
+++ b/src/kernel/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2018"
 
 [dependencies]
 vm-memory = { version = ">=0.2.2", features = ["backend-mmap"] }
+multiboot2-host = { version = "0.2.0", features = ["hvm"] }
 
 utils = { path = "../utils" }
