--- a/src/arch/Cargo.toml
+++ b/src/arch/Cargo.toml
@@ -9,6 +9,7 @@ kvm-bindings = { git = "https://github.com/firecracker-microvm/kvm-bindings", ta
 kvm-ioctls = { git = "https://github.com/firecracker-microvm/kvm-ioctls", tag = "v0.5.0-2" }
 libc = ">=0.2.39"
 vm-memory = { version = ">=0.2.2", features = ["backend-mmap"] }
+multiboot2-host = { version = "0.2.0", features = ["hvm"] }
 
 arch_gen = { path = "../arch_gen" }
 utils = { path = "../utils" }
