use bytemuck to install page tables in bulk

--- a/src/arch/Cargo.toml
+++ b/src/arch/Cargo.toml
@@ -14,6 +14,7 @@ multiboot2-host = { version = "0.2.1", features = ["hvm"] }
 arch_gen = { path = "../arch_gen" }
 utils = { path = "../utils" }
 bitfield = "0.13.2"
+bytemuck = { version = "1.4.1", features = ["derive"] }
 
 [dev-dependencies]
 device_tree = ">=1.1.0"
